--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -106,6 +106,7 @@
     <None Include="res\address_book.bmp" />
     <None Include="res\alltrade1.bmp" />
     <None Include="res\bitmap1.bmp" />
+    <None Include="res\button_bar.bmp" />
     <None Include="res\button_black_ground.bmp" />
     <None Include="res\DacrsUI.ico" />
     <None Include="res\DacrsUI.rc2" />
@@ -115,6 +116,8 @@
     <None Include="res\MainUI.bmp" />
     <None Include="res\MainUI_1.bmp" />
     <None Include="res\MainUI_2.bmp" />
+    <None Include="res\main_log_1.bmp" />
+    <None Include="res\main_log_2.bmp" />
     <None Include="res\main_ui_background.bmp" />
     <None Include="res\Mortgage.bmp" />
     <None Include="res\P2P.bmp" />
