add noui msg thread
Former-commit-id: 68e9f0fb918b7412a6e84558ad8c9722f1bdf485

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="MyMutex.h" />
     <ClInclude Include="MyQueue.h" />
     <ClInclude Include="NewAddressDlg.h" />
+    <ClInclude Include="NoUiMsgBuffer.h" />
     <ClInclude Include="P2PDlg.h" />
     <ClInclude Include="PostMsg.h" />
     <ClInclude Include="ProgStatusBar.h" />
@@ -194,6 +195,7 @@
     <ClCompile Include="MyMutex.cpp" />
     <ClCompile Include="MyQueue.cpp" />
     <ClCompile Include="NewAddressDlg.cpp" />
+    <ClCompile Include="NoUiMsgBuffer.cpp" />
     <ClCompile Include="P2PDlg.cpp" />
     <ClCompile Include="PostMsg.cpp" />
     <ClCompile Include="ProgStatusBar.cpp" />
