--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -103,6 +103,9 @@
     <ClCompile Include="BtnST.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="NoUiMsgBuffer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -241,6 +244,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="BtnST.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="NoUiMsgBuffer.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
