add no ui process thread

--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -1,11 +1,12 @@
 rpcuser=bitcoin 
 rpcpassword=admin
-testnet=1
+regtest=1
 blockminsize=1000
 zapwallettxes=0
 debug=ERROR
 #debug=vm
 debug=NOUI
+debug=TOUI
 debug=INFO
 #debug=net
 #debug=CONTRACT_TX
@@ -16,7 +17,10 @@ logprintfileline=1
 listen=1
 server=1
 rpcport=18332
-uiport=123457
+uiport=12345
+connect=192.168.1.102:6665
+isdbtraversal=1
+disablesafemode=1
 #port=3001
 
 
