--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -4,7 +4,11 @@
 		"server_config_name":"dacrs.conf",
 		"chinese":0
     },
-	
+	"netparam":{
+		"server_ip":"192.168.1.102",
+		"rpc_port":"6968",
+		"server_ui_port":"4555"
+	},
 	"script":{  
         "betscript":"3-2",
 		"darkscript":"3-1"
