--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -426,6 +426,42 @@
     <None Include="res\progress4.bmp">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\button_send_1.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\button_send_2.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\button_send_3.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\activate_addr_1.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\activate_addr_2.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\activate_addr_3.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\newaddr-1.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\newaddr-2.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\newaddr-3.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\copy_addr_1.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\copy_addr_2.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\copy_addr_3.bmp">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="资源文件">
