--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -109,6 +109,9 @@
     <ClCompile Include="StartProgress.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SplashThread.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -250,9 +253,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="NoUiMsgBuffer.h">
-    <Filter>头文件</Filter>
+      <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="StartProgress.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SplashThread.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -466,6 +472,9 @@
       <Filter>资源文件</Filter>
     </None>
     <None Include="res\copy_addr_3.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\wallet_uipro.bmp">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
