--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -165,6 +165,7 @@
     <None Include="res\Tip.bmp" />
     <None Include="res\tradedetail_logo_1.bmp" />
     <None Include="res\tradedetail_logo_2.bmp" />
+    <None Include="res\wallet_uipro.bmp" />
     <None Include="res\wndtitlebk.bmp" />
     <None Include="res\xh_2.bmp" />
     <None Include="res\xh_3.bmp" />
@@ -211,6 +212,7 @@
     <ClInclude Include="SendDlg.h" />
     <ClInclude Include="ShadeButtonST.h" />
     <ClInclude Include="SignAccountsDlg.h" />
+    <ClInclude Include="SplashThread.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="SqliteDeal.h" />
     <ClInclude Include="StartProgress.h" />
@@ -251,6 +253,7 @@
     <ClCompile Include="SendDlg.cpp" />
     <ClCompile Include="ShadeButtonST.cpp" />
     <ClCompile Include="SignAccountsDlg.cpp" />
+    <ClCompile Include="SplashThread.cpp" />
     <ClCompile Include="SqliteDeal.cpp" />
     <ClCompile Include="StartProgress.cpp" />
     <ClCompile Include="StaticTrans.cpp" />
