--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -14,7 +14,7 @@ printtoconsole=0
 logtimestamps=1
 logprintfofile=1
 logprintfileline=1
-#checkblocks=10
+checkblocks=10
 server=1
 rpcport=18332
 uiport=12345
