--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -7,7 +7,9 @@
 	"netparam":{
 		"server_ip":"192.168.1.102",
 		"rpc_port":"6968",
-		"server_ui_port":"4555"
+		"server_ui_port":"4555",
+		"rpc_user":"smartcoin",
+		"rpc_password":"admin"
 	},
 	"script":{  
         "betscript":"3-2",
