--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -16,10 +16,16 @@ logprintfofile=1
 logprintfileline=1
 checkblocks=10
 server=1
-rpcport=18332
-uiport=12345
+listen=1
+port=5648
+uiport=2361
+rpcport=17523
 connect=192.168.1.102:6665
-isdbtraversal=1
+connect=192.168.1.102:8869
+#connect=172.23.1.150
+#connect=172.23.1.149
+#connect=172.23.1.169
+#connect=172.23.1.160
+#connect=172.23.1.18
 disablesafemode=1
-#port=3001
-
+isdbtraversal=1
