add update configure file
Former-commit-id: fa89037e923a7bbb587be380472ab89b9421fad3

--- a/bin/qupdater.ini
+++ b/bin/qupdater.ini
@@ -1,9 +1,8 @@
 [QUpdater]
 Langage=qupdatercn.lan
 CheckLostFile=true
-AutoNext=1
 [UPDATEINFO]
-ListURL=http://api.dspay.org/updata/qupdater.xml
+ListURL=http://www.dacrs.com/updata/qupdater.xml
 [APPLICATION]
-Application=UIDemo.exe
-Name=QUpdater UIDemo
+Application=DacrsUI.exe
+Name=QUpdater DacrsUI
