--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -117,6 +117,7 @@
     <None Include="res\add_app_3.bmp" />
     <None Include="res\add_app_4.bmp" />
     <None Include="res\alltrade1.bmp" />
+    <None Include="res\bak_wallet.bmp" />
     <None Include="res\bitmap1.bmp" />
     <None Include="res\bitmap4.bmp" />
     <None Include="res\button_bar.bmp" />
@@ -143,6 +144,7 @@
     <None Include="res\diya_logo_4.bmp" />
     <None Include="res\dlg_balck_ground.bmp" />
     <None Include="res\dlg_bj.bmp" />
+    <None Include="res\import_wallet.bmp" />
     <None Include="res\IPO.bmp" />
     <None Include="res\ipo_1.bmp" />
     <None Include="res\ipo_2.bmp" />
