--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="BmpBtn.h" />
     <ClInclude Include="BtnST.h" />
     <ClInclude Include="CeXDib.h" />
+    <ClInclude Include="ChangeDPI.h" />
     <ClInclude Include="CommonStruct.h" />
     <ClInclude Include="Out.h" />
     <ClInclude Include="OutGifDlg.h" />
@@ -267,6 +268,7 @@
     <ClCompile Include="BmpBtn.cpp" />
     <ClCompile Include="BtnST.cpp" />
     <ClCompile Include="CeXDib.cpp" />
+    <ClCompile Include="ChangeDPI.cpp" />
     <ClCompile Include="CommonStruct.cpp" />
     <ClCompile Include="DacrsUI.cpp" />
     <ClCompile Include="DacrsUIDlg.cpp" />
