--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -130,6 +130,9 @@
     <ClCompile Include="OutGifDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="AddrBook.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -295,6 +298,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="OutGifDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="AddrBook.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
