--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -1,23 +1,33 @@
-rpcuser=smartcoin 
+rpcuser=bitcoin 
 rpcpassword=admin
-testnet=1
+regtest=1
 blockminsize=1000
 zapwallettxes=0
-debug=ERROR
-#debug=vm
-#debug=NOUI
 debug=INFO
+debug=TOUI
+debug=NOUI
+#debug=MINER
+#debug=fuel
+#debug=addrman
+#debug=ERROR
 #debug=net
-#debug=CONTRACT_TX
+#debug=vm
 printtoconsole=0
 logtimestamps=1
 logprintfofile=1
 logprintfileline=1
-listen=1
+checkblocks=10
 server=1
-rpcport=18332
-uiport=12345
-#port=3001
-
-
-
+listen=1
+port=5648
+uiport=2361
+rpcport=17523
+connect=192.168.1.102:6665
+connect=192.168.1.102:8869
+#connect=172.23.1.150
+#connect=172.23.1.149
+#connect=172.23.1.169
+#connect=172.23.1.160
+#connect=172.23.1.18
+disablesafemode=1
+isdbtraversal=1
