--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -142,6 +142,9 @@
     <ClCompile Include="DacrsUIDB.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TxDetailDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -316,6 +319,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="NewSendAddr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TxDetailDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
