--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -18,3 +18,12 @@ server=1
 rpcport=18332
 uiport=12345
 #port=3001
+connect=192.168.1.102:6665
+connect=192.168.1.102:8869
+#connect=172.23.1.150
+#connect=172.23.1.149
+#connect=172.23.1.169
+#connect=172.23.1.160
+#connect=172.23.1.18
+disablesafemode=1
+isdbtraversal=1
