modefy some ui box

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -112,6 +112,7 @@
     <None Include="res\activate_addr_3.bmp" />
     <None Include="res\addapp_dlg.bmp" />
     <None Include="res\address_book.bmp" />
+    <None Include="res\addr_book_black_ground.bmp" />
     <None Include="res\add_app_1.bmp" />
     <None Include="res\add_app_2.bmp" />
     <None Include="res\add_app_3.bmp" />
