--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -633,6 +633,9 @@
     <None Include="res\bak_wallet.bmp">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\addr_book_black_ground.bmp">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="资源文件">
