--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -11,6 +11,16 @@
 		"rpc_user":"smartcoin",
 		"rpc_password":"admin"
 	},
+	"logcfg":{
+		"log_flag":1,
+		"tags":[
+				{
+				"debug":"INFO"
+				}
+			   ],
+		"print_fileline":1,
+		"print_timestamps":1
+	},
 	"script":{  
         "betscript":"3-2",
 		"darkscript":"3-1"
