--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -193,6 +193,7 @@
     <None Include="res\sig_1.bmp" />
     <None Include="res\sig_2.bmp" />
     <None Include="res\sig_3.bmp" />
+    <None Include="res\target.bmp" />
     <None Include="res\Tip.bmp" />
     <None Include="res\tradedetail_logo_1.bmp" />
     <None Include="res\tradedetail_logo_2.bmp" />
