修改日志模块
Former-commit-id: c92eb62b6905f0de22782ffc91f09871df11c241

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -270,6 +270,7 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TradDlg.h" />
     <ClInclude Include="UiHead.h" />
+    <ClInclude Include="Z:\dacrs_release\dacrs\src\tinyformat.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddApp.cpp" />
