--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -645,6 +645,9 @@
     <None Include="res\target.bmp">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\exit_bj.bmp">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="资源文件">
