--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -23,7 +23,8 @@
 	},
 	"script":{  
         "betscript":"3-2",
-		"darkscript":"3-1"
+		"darkscript":"3-1",
+		"iposcript":"1-1"
     },
 	"darkcoin": {
 		"SendBuyernFee":33670,
